footcapingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: footcap-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
   - host: aakashdashpute.cloud
     http:
      paths:
      - path: /
        pathType: Prefix    
        backend:
          service:
            name: footcap-service
            port:
              number: 80
